# MMC-QA

./: .env.example  .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
advanced/: calibration_eval.py
assets/: index-11AHswwu.css  index-BtNjj9fZ.js  index-CYP0yQmT.js
data/: README.md
examples/: run_pipeline.sh
src/mmc_qa/: __init__.py  data.py  generate.py  judge.py  llm_client.py  score.py
tools/: build_dataset.py
